fixed a bug on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -4,11 +4,11 @@ body {
   background-image: url(assets/1497448.jpg);
   background-size: cover;
   text-align: center;
-  overflow-x: hidden;
   color: #fff;
 }
 
 main {
+  width: 100%;
   max-width: 1600px;
   margin: auto;
 }
@@ -28,25 +28,16 @@ header h1 {
 
 .guys {
   position: absolute;
-  top: 0;
-  left: -50%;
+  top: 20px;
   z-index: -1;
-  width: 150%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
 .guy {
-  width: 100%;
+  width: 50%;
   height: auto;
-}
-
-.guy-point {
-  transform: translateX(-15%);
-}
-
-.guy-up {
-  transform: translateX(-53%);
 }
 
 h2,
